# FastApi-React

fast.api/: .env  alembic.ini  pyproject.toml
fast.api/app/: config.py  database.py  main.py
fast.api/app/model/: user.py
fast.api/app/router/: auth.py  post.py  user.py
fast.api/app/schema/: token.py  user_out.py
fast.api/app/services/: __init__.py  auth.py
fast.api/app/utils/: hash_utils.py  oauth2.py
fast.api/migrations/: env.py
fast.api/migrations/versions/: 541b1399e57f_init.py
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: index.js
frontend/src/components/Header/: Header.module.css
frontend/src/components/Login/: Login.js  Login.module.css
frontend/src/components/Register/: Register.js
frontend/src/constants/: urls.js
frontend/src/services/: index.js  user_service.js
